Fix image out of bounds
- closes #12
- this special case was due to the fact this image is inside a `figure` tag

--- a/.app/_styles/main.css
+++ b/.app/_styles/main.css
@@ -171,6 +171,11 @@ article.block h2 {
 
 figure {
     max-width: 100%;
+    margin: 0;
+}
+
+figure img {
+    max-width: 100%;
 }
 
 figcaption {
